# Axitons

./: .gitignore  CMakeLists.txt  TODO  driver.py
include/: axiton.h  cudaErrors.h  enum-vars.h
include/cosmos/: axionMass.h  cosmos.h
include/fields/: fields.h
include/io/: Hdf5IO.h
include/propagator/: .propClass.h.swp  propBase.h  propClass.h  propKernel.h  propagator.h
include/utils/: iParms.h  initGpu.h  memAlloc.h  parse.h  tunable.h  utils.h
lib/: CMakeLists.txt
lib/fields/: fields.cpp
lib/io/: Hdf5IO.cpp
lib/propagator/: propKernel.cu  propagator.cpp
lib/utils/: initGpu.cpp  memAlloc.cpp  parse.cpp
script/: axi  ic-gen.py  plotax.py
src/: CMakeLists.txt  axiton.cpp
